k8s/bank-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bank-app
  labels:
    app.kubernetes.io/part-of: pod10-bank
