k8s/bank-app/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-backend-deployment
  namespace: bank-app
  labels:
    app: bank-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-backend
  template:
    metadata:
      labels:
        app: bank-backend
    spec:
      containers:
        - name: bank-backend
          image: 900515855079.dkr.ecr.us-east-1.amazonaws.com/bank-backendapi:3
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
