k8s/bank-app/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-frontend-deployment
  namespace: bank-app
  labels:
    app: bank-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-frontend
  template:
    metadata:
      labels:
        app: bank-frontend
    spec:
      containers:
        - name: bank-frontend
          image: 900515855079.dkr.ecr.us-east-1.amazonaws.com/bank-frontend:11
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
