k8s/bank-app/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-backend-service
  namespace: bank-app
spec:
  selector:
    app: bank-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
