k8s/bank-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-frontend-service
  namespace: bank-app
spec:
  selector:
    app: bank-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
