k8s/bank-app/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-backend-ingress
  namespace: bank-app
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - bankapi.gwinseapptest.online
      secretName: bankapi-gwinseapptest-online
  rules:
    - host: bankapi.gwinseapptest.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-backend-service
                port:
                  number: 8080
