k8s/bank-app/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-frontend-ingress
  namespace: bank-app
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - bank.cohort5pod10.online
      secretName: bank-cohort5pod10-online
  rules:
    - host: bank.cohort5pod10.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bank-frontend-service
                port:
                  number: 80
